testdata/baselines/reference/compiler/recursiveMappedTypeAssignableToAugmentedRecursiveType.errors.txt
recursiveMappedTypeAssignableToAugmentedRecursiveType.ts(14,7): error TS2322: Type 'Transform<Transform<Root>>' is not assignable to type 'Root'.
  Types of property 'child' are incompatible.
    Type 'Transform<Transform<Child>>' is not assignable to type 'Child'.
      Type 'Transform<Transform<Root>>' is not assignable to type 'Child'.


==== recursiveMappedTypeAssignableToAugmentedRecursiveType.ts (1 errors) ====
    type Transform<T> = {
        [K in keyof T]: T[K] extends object ? Transform<T[K]> : T[K];
    };
    
    type Child = ChildMap[keyof ChildMap];
    
    interface ChildMap { root: Root; }
    interface Root { child: Child; }
    
    interface ChildMap { element: XMLElement; }
    interface XMLElement { parent: Root; fn(): void; }
    
    declare const root: Transform<Transform<Root>>;
    const result: Root = root;
          ~~~~~~
!!! error TS2322: Type 'Transform<Transform<Root>>' is not assignable to type 'Root'.
!!! error TS2322:   Types of property 'child' are incompatible.
!!! error TS2322:     Type 'Transform<Transform<Child>>' is not assignable to type 'Child'.
!!! error TS2322:       Type 'Transform<Transform<Root>>' is not assignable to type 'Child'.
    